--- a/UProtobuf.uplugin
+++ b/UProtobuf.uplugin
@@ -2,12 +2,12 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "Protobuf",
+	"FriendlyName": "UProtobuf",
 	"Description": "",
-	"Category": "Other",
+	"Category": "RobCoG",
 	"CreatedBy": "",
 	"CreatedByURL": "",
-	"DocsURL": "",
+	"DocsURL": "https://github.com/robcog-iai/UProtobuf",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
